--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,14 +28,22 @@
             android:src="@drawable/logo_horizontal" />
 
         <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:fontFamily="@font/reef"
+            android:text="Добро пожаловать"
+            android:textSize="24dp"/>
+
+        <TextView
             android:id="@+id/tvWelcome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="50dp"
             android:gravity="center"
             android:fontFamily="@font/reef"
-            android:textSize="24dp"
-            android:text="Добро пожаловать, Василий!" />
+            android:textSize="24dp" />
 
         <Button
             android:id="@+id/btnStartTest"
